@@ -3,6 +3,16 @@ Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp an
       when the JNI interface is changed.
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
+04-February-2014:
+=================
++ Query.subtable() and Query.endSubtable() is now implemented.
+! API Breaking change: The following methods in both Table and TableView class 
+  has been renamed to be consistent with other methods:
+  - sumInt()     -> sumLong().
+  - maximumInt() -> maximumLong().
+  - minimumInt() -> minimumLong().
+  - averageInt() -> averageLong().
+
 18-December-2013:
 =================
 ! Bugfix: Table and TableView's findFirst*() methods now correctly returns -1 
